<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:background="#ffcccda4">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/create"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:onClick="goToCreate"
        android:minWidth="400dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activities"
        android:id="@+id/activitiesButton"
        android:layout_below="@+id/create"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:onClick="goToActivities"
        android:minWidth="400dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:id="@+id/statsButton"
        android:layout_below="@+id/activitiesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:onClick="goToStats"
        android:minWidth="400dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About"
        android:id="@+id/aboutButton"
        android:singleLine="true"
        android:minWidth="400dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="goToAbout" />

</RelativeLayout>
