<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nick.timelogger.Create"
    android:background="#ffcccda4"
    android:id="@+id/layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/elapsed"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameText"
        android:minWidth="290dp"
        android:background="#fffffafa"
        android:minHeight="40dp"
        android:layout_toEndOf="@+id/elapsed"
        android:layout_marginTop="54dp"
        android:layout_below="@+id/elapsed" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_toStartOf="@+id/nameText"
        android:onClick="save"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/nameText"
        android:layout_marginRight="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sns"
        android:id="@+id/saveAndStart"
        android:onClick="saveAndStart"
        android:layout_toEndOf="@+id/status"
        android:layout_alignParentBottom="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Type"
        android:id="@+id/status"
        android:layout_below="@+id/nameText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:id="@+id/typeGroup"
        android:weightSum="1">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Work"
            android:id="@+id/workRadio"
            android:checked="false"
            android:minWidth="200dp" />

        <RadioButton
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:text="Personal"
            android:id="@+id/personalRadio"
            android:checked="false"
            android:minWidth="200dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Other"
            android:id="@+id/otherRadio"
            android:singleLine="true"
            android:minWidth="200dp" />
    </RadioGroup>

</RelativeLayout>
